--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         content="VidTool is a software application designed to enhance the efficiency of downloading videos and audios from social media platforms.">
     <meta name="theme-color" content="#1A1A1A" />
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://codekosh-afi.github.io/codekosh.github.io/">
+    <meta property="og:url" content="https://ashutoshgupta01.github.io/vidtool/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Vidtool: Unleash the Power of Video, Download and Convert with Ease!">
-    <meta property="og:site_name" content="https://codekosh-afi.github.io/codekosh.github.io/" />
+    <meta property="og:site_name" content="https://ashutoshgupta01.github.io/vidtool/" />
     <meta property="og:description"
         content="VidTool is a software application designed to enhance the efficiency of downloading videos and audios from social media platforms.">
     <meta property="og:image" content="https://sketchub.in/assets/images/thumbnail.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="https://codekosh-afi.github.io/codekosh.github.io/">
-    <meta property="twitter:url" content="https://codekosh-afi.github.io/codekosh.github.io/">
+    <meta property="twitter:domain" content="https://ashutoshgupta01.github.io/vidtool/">
+    <meta property="twitter:url" content="https://ashutoshgupta01.github.io/vidtool/">
     <meta name="twitter:title" content="Vidtool: Unleash the Power of Video, Download and Convert with Ease!">
     <meta name="twitter:description"
         content="VidTool is a software application designed to enhance the efficiency of downloading videos and audios from social media platforms.">
@@ -132,7 +132,7 @@
                 <div class="left">
                     <h1>VidTool</h1>
                     <div class="networks">
-                        <a href="https://t.me/sketchubt"><img src="assets/telegram.svg"></a>
+                        <a href="https://t.me/vidtool"><img src="assets/telegram.svg"></a>
                     </div>
                     <!--supports line breaking-->
                     <span class="legaltext" id="legal">Webpage inspired from  <a href="https://sketchub.in/">Sketchub</a>
