--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:site_name" content="https://ashutoshgupta01.github.io/vidtool/" />
     <meta property="og:description"
         content="VidTool is a software application designed to enhance the efficiency of downloading videos and audios from social media platforms.">
-    <meta property="og:image" content="https://sketchub.in/assets/images/thumbnail.png">
+    <meta property="og:image" content="https://ashutoshgupta01.github.io/vidtool/assets/icon_main.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -29,7 +29,7 @@
     <meta name="twitter:title" content="Vidtool: Unleash the Power of Video, Download and Convert with Ease!">
     <meta name="twitter:description"
         content="VidTool is a software application designed to enhance the efficiency of downloading videos and audios from social media platforms.">
-    <meta name="twitter:image" content="https://sketchub.in/assets/images/thumbnail.png">
+    <meta name="twitter:image" content="https://ashutoshgupta01.github.io/vidtool/assets/icon_main.png">
 </head>
 
 <body>
