--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="https://ashutoshgupta01.github.io/vidtool/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Vidtool: Unleash the Power of Video, Download and Convert with Ease!">
-    <meta property="og:site_name" content="https://ashutoshgupta01.github.io/vidtool/" />
+    <meta property="og:site_name" content="VidTool" />
     <meta property="og:description"
         content="VidTool is a software application designed to enhance the efficiency of downloading videos and audios from social media platforms.">
     <meta property="og:image" content="https://ashutoshgupta01.github.io/vidtool/assets/icon_main.png">
@@ -43,8 +43,6 @@
                 <a href="#">Home</a>
                 <a href="#features">Features</a>
                 <a href="#footer">Community</a>
-                <!-- <a href="https://forum.sketchub.in">Forums</a>
-                <a href="https://blog.sketchub.in">Blog</a> -->
                 <a href="#footer">Contact</a>
             </nav>
         </div>
@@ -138,7 +136,7 @@
                     <span class="legaltext" id="legal">Webpage inspired from  <a href="https://sketchub.in/">Sketchub</a>
 
                         &copy; </span>
-                        <script>document.getElementById('legal').appendChild(document.createTextNode(new Date().getFullYear() + ' Sketchub'))</script>
+                        <script>document.getElementById('legal').appendChild(document.createTextNode(new Date().getFullYear() + ' VidTool'))</script>
 
                 </div>
                 <div class="right">
