--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1>Empowering Your Journey to Unleash and Share Your Bold, <b>Awesome Creations!</b></h1>
                     <p>Unlocking the Power of Video, One Download at a Time via CodeKosh.</p>
                     <div class="buttons">
-                        <button onclick="location.href='';">Download for Android</button><br>
+                        <button onclick="location.href='https://firebasestorage.googleapis.com/v0/b/vidtool-asp.appspot.com/o/app-debug.apk?alt=media&token=8fc22a9a-3236-43b3-8658-fc724ae0234e';">Download for Android</button><br>
                     </div>
                 </div>
             </div>
